# seekvfs

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: quickstart.md
docs/recipes/: maximal.md  minimal.md
src/seekvfs/: __init__.py  exceptions.py  models.py  observability.py  protocol.py  reranker.py  router.py  uri.py  vfs.py
src/seekvfs/tools/: __init__.py  anthropic.py  langgraph.py  mcp.py  openai.py  spec.py
src/seekvfs_recipes/: __init__.py
src/seekvfs_recipes/maximal/: __init__.py  backend.py  dao.py  embedder.py  exceptions.py  protocol.py  reconcile.py  schema.sql  summarizer.py
src/seekvfs_recipes/minimal/: __init__.py  backend.py
tests/: conftest.py
tests/recipes/maximal/: conftest.py  test_embedder.py  test_summarizer.py
tests/unit/: test_models.py  test_observability.py  test_reranker.py  test_router.py  test_tools_anthropic.py  test_tools_openai.py  test_tools_spec.py  test_uri.py  test_vfs.py
